--- a/GUI/MainWindow.xaml
+++ b/GUI/MainWindow.xaml
@@ -5,7 +5,9 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Upsilon.Apps.Passkey.GUI"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
+        Title="{Binding WindowTitle}"
+        ResizeMode="CanMinimize"
+        Height="100" Width="400">
     <Grid>
 
     </Grid>
