--- a/GUI/Views/PasswordGenerator.xaml
+++ b/GUI/Views/PasswordGenerator.xaml
@@ -25,17 +25,46 @@
                         <ColumnDefinition Width="*"/>
                     </Grid.ColumnDefinitions>
                     <Label Grid.Column="0"
-                           VerticalContentAlignment="Center">Length :</Label>
+                           VerticalContentAlignment="Center">
+                        Length :
+                    </Label>
                     <TextBox Grid.Column="1"
                              Width="50"
                              VerticalAlignment="Center"
                              VerticalContentAlignment="Center"
                              TextAlignment="Right"
                              PreviewTextInput="_length_TextBox_PreviewTextInput"
-                             DataObject.Pasting="_length_TextBox_Pasting">20</TextBox>
+                             DataObject.Pasting="_length_TextBox_Pasting">
+                        20
+                    </TextBox>
                 </Grid>
             </Menu>
-            <TextBox VerticalAlignment="Top" VerticalContentAlignment="Center"></TextBox>
+            <StackPanel>
+                <TextBox VerticalAlignment="Top" VerticalContentAlignment="Center"/>
+                <StackPanel Orientation="Horizontal">
+                    <CheckBox Grid.Column="0"
+                          Grid.Row="0"
+                          VerticalContentAlignment="Center">
+                        Numeric
+                    </CheckBox>
+                    <CheckBox Grid.Column="0"
+                          Grid.Row="1"
+                          VerticalContentAlignment="Center">
+                        Special Characters
+                    </CheckBox>
+                    <CheckBox Grid.Column="1"
+                          Grid.Row="0"
+                          VerticalContentAlignment="Center">
+                        Lower case Alphabet
+                    </CheckBox>
+                    <CheckBox Grid.Column="1"
+                          Grid.Row="1"
+                          VerticalContentAlignment="Center">
+                        Upper case Alphabet
+                    </CheckBox>
+                </StackPanel>
+                <TextBox AcceptsReturn="True" TextWrapping="Wrap"/>
+            </StackPanel>
         </DockPanel>
     </Grid>
 </Window>
