--- a/GUI/Views/PasswordGenerator.xaml
+++ b/GUI/Views/PasswordGenerator.xaml
@@ -4,11 +4,13 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Upsilon.Apps.Passkey.GUI.Views"
+        xmlns:viewmodels="clr-namespace:Upsilon.Apps.Passkey.GUI.ViewModels"
+        d:DataContext="{d:DesignInstance Type=viewmodels:PasswordGeneratorViewModel}"
         mc:Ignorable="d"
         Title="{Binding PasswordGeneratorWindowTitle}"
         ResizeMode="CanMinimize"
         WindowStartupLocation="CenterScreen"
-        Height="300" Width="500">
+        Height="215" Width="500">
     <Grid>
         <DockPanel>
             <Menu DockPanel.Dock="Top">
@@ -17,53 +19,76 @@
                         <DockPanel HorizontalAlignment="Stretch"/>
                     </ItemsPanelTemplate>
                 </Menu.ItemsPanel>
-                <MenuItem Header="_Preview"/>
-                <MenuItem Header="_Copy"/>
-                <Grid>
-                    <Grid.ColumnDefinitions>
-                        <ColumnDefinition Width="Auto"/>
-                        <ColumnDefinition Width="*"/>
-                    </Grid.ColumnDefinitions>
-                    <Label Grid.Column="0"
-                           VerticalContentAlignment="Center">
-                        Length :
-                    </Label>
-                    <TextBox Grid.Column="1"
-                             Width="50"
-                             VerticalAlignment="Center"
-                             VerticalContentAlignment="Center"
-                             TextAlignment="Right"
-                             PreviewTextInput="_length_TextBox_PreviewTextInput"
-                             DataObject.Pasting="_length_TextBox_Pasting">
-                        20
-                    </TextBox>
-                </Grid>
+                <MenuItem Height="40"
+                          Click="_insertMenuItem_Click"
+                          Header="_Insert"/>
+                <MenuItem Height="40"
+                          Click="_regenerateMenuItem_Click"
+                          Header="_Regenerate"/>
+                <MenuItem Height="40"
+                          Click="_copyMenuItem_Click"
+                          Header="_Copy"/>
+                <MenuItem Height="40"
+                          Width="75"
+                          IsEnabled="False"/>
+                <MenuItem Height="40">
+                    <MenuItem.Header>
+                        <StackPanel Orientation="Horizontal">
+                            <CheckBox Margin="5"
+                                      VerticalContentAlignment="Center"
+                                      IsChecked="{Binding CheckIfLeaked}">
+                                Check if leaked
+                            </CheckBox>
+                            <Label Grid.Column="0"
+                                   VerticalContentAlignment="Center">
+                                Length :
+                            </Label>
+                            <TextBox Grid.Column="1"
+                                     Width="60"
+                                     VerticalAlignment="Center"
+                                     VerticalContentAlignment="Center"
+                                     TextAlignment="Center"
+                                     Text="{Binding PasswordLength, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
+                                     PreviewTextInput="_length_TextBox_PreviewTextInput"
+                                     DataObject.Pasting="_length_TextBox_Pasting"/>
+                        </StackPanel>
+                    </MenuItem.Header>
+                </MenuItem>
             </Menu>
             <StackPanel>
-                <TextBox VerticalAlignment="Top" VerticalContentAlignment="Center"/>
+                <TextBox Margin="5"
+                         VerticalAlignment="Top"
+                         VerticalContentAlignment="Center"
+                         FontFamily="Courier New"
+                         FontSize="20"
+                         Text="{Binding GeneratedPassword, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"/>
                 <StackPanel Orientation="Horizontal">
-                    <CheckBox Grid.Column="0"
-                          Grid.Row="0"
-                          VerticalContentAlignment="Center">
-                        Numeric
+                    <CheckBox Margin="5"
+                              VerticalContentAlignment="Center"
+                              IsChecked="{Binding IncludeNumerics}">
+                        Numerics
                     </CheckBox>
-                    <CheckBox Grid.Column="0"
-                          Grid.Row="1"
-                          VerticalContentAlignment="Center">
-                        Special Characters
-                    </CheckBox>
-                    <CheckBox Grid.Column="1"
-                          Grid.Row="0"
-                          VerticalContentAlignment="Center">
-                        Lower case Alphabet
-                    </CheckBox>
-                    <CheckBox Grid.Column="1"
-                          Grid.Row="1"
-                          VerticalContentAlignment="Center">
+                    <CheckBox Margin="5" VerticalContentAlignment="Center"
+                        IsChecked="{Binding IncludeUpperCaseAlphabet}">
                         Upper case Alphabet
                     </CheckBox>
+                    <CheckBox Margin="5" VerticalContentAlignment="Center"
+                              IsChecked="{Binding IncludeLowerCaseAlphabet}">
+                        Lower case Alphabet
+                    </CheckBox>
+                    <CheckBox Margin="5"
+                              VerticalContentAlignment="Center"
+                              IsChecked="{Binding IncludeSpecialCharacters}">
+                        Special Characters
+                    </CheckBox>
                 </StackPanel>
-                <TextBox AcceptsReturn="True" TextWrapping="Wrap"/>
+                <TextBox Margin="5"
+                         Height="65"
+                         AcceptsReturn="True"
+                         TextWrapping="Wrap"
+                         FontFamily="Courier New"
+                         FontSize="18"
+                         Text="{Binding Alphabet, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"/>
             </StackPanel>
         </DockPanel>
     </Grid>
