--- a/GUI/Themes/DarkTheme.xaml
+++ b/GUI/Themes/DarkTheme.xaml
@@ -8,7 +8,12 @@
     <SolidColorBrush x:Key="AccentBrush" Color="#007ACC"/>
 
     <!-- Styles -->
-    <Style TargetType="Grid">
+
+    <Style TargetType="StackPanel">
+        <Setter Property="Background" Value="{StaticResource BackgroundBrush}"/>
+    </Style>
+
+    <Style TargetType="DockPanel">
         <Setter Property="Background" Value="{StaticResource BackgroundBrush}"/>
     </Style>
 
@@ -17,7 +22,7 @@
     </Style>
 
     <Style TargetType="MenuItem">
-        <Setter Property="Background" Value="{StaticResource SecondaryBackgroundBrush}"/>
+        <Setter Property="Background" Value="{StaticResource BackgroundBrush}"/>
         <Setter Property="Foreground" Value="{StaticResource ForegroundBrush}"/>
         <Setter Property="BorderBrush" Value="{StaticResource BorderBrush}"/>
         <Setter Property="Padding" Value="10,5"/>
@@ -29,7 +34,6 @@
     </Style>
 
     <Style TargetType="CheckBox">
-        <Setter Property="Background" Value="{StaticResource BackgroundBrush}"/>
         <Setter Property="Foreground" Value="{StaticResource ForegroundBrush}"/>
     </Style>
     
