--- a/GUI/Views/PasswordGenerator.xaml
+++ b/GUI/Views/PasswordGenerator.xaml
@@ -21,6 +21,7 @@
                 </Menu.ItemsPanel>
                 <MenuItem Height="40"
                           Click="_insertMenuItem_Click"
+                          Visibility="{Binding AllowInsert}"
                           Header="_Insert"/>
                 <MenuItem Height="40"
                           Click="_regenerateMenuItem_Click"
