--- a/GUI/Views/PasswordGenerator.xaml
+++ b/GUI/Views/PasswordGenerator.xaml
@@ -20,19 +20,17 @@
                     </ItemsPanelTemplate>
                 </Menu.ItemsPanel>
                 <MenuItem Height="40"
-                          Click="_insertMenuItem_Click"
-                          Visibility="{Binding AllowInsert}"
-                          Header="_Insert"/>
-                <MenuItem Height="40"
                           Click="_regenerateMenuItem_Click"
                           Header="_Regenerate"/>
                 <MenuItem Height="40"
                           Click="_copyMenuItem_Click"
                           Header="_Copy"/>
                 <MenuItem Height="40"
-                          Width="75"
-                          IsEnabled="False"/>
-                <MenuItem Height="40">
+                          Click="_insertMenuItem_Click"
+                          Visibility="{Binding AllowInsert}"
+                          Header="_Insert"/>
+                <MenuItem Height="40"
+                          HorizontalAlignment="Right">
                     <MenuItem.Header>
                         <StackPanel Orientation="Horizontal">
                             <CheckBox Margin="5"
