--- a/GUI/Views/UserView.xaml
+++ b/GUI/Views/UserView.xaml
@@ -1,4 +1,5 @@
-﻿<Window x:Class="Upsilon.Apps.Passkey.GUI.Views.UserView"
+﻿<Window xmlns:Controls="clr-namespace:Upsilon.Apps.Passkey.GUI.Views.Controls"
+        x:Class="Upsilon.Apps.Passkey.GUI.Views.UserView"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -12,6 +13,24 @@
         WindowStartupLocation="CenterScreen"
         Height="215" Width="500">
     <StackPanel>
-        
+        <Menu>
+            <MenuItem Margin="5"
+                      Header="_Save"/>
+        </Menu>
+        <StackPanel Orientation="Horizontal">
+            <GroupBox Header="Credentials">
+                <StackPanel>
+                    <StackPanel Orientation="Horizontal">
+                        <Label Margin="5"
+                               VerticalAlignment="Center">Username :</Label>
+                        <TextBox Margin="5"
+                                 Width="100"
+                                 VerticalAlignment="Center"
+                                 Text="username"/>
+                    </StackPanel>
+                </StackPanel>
+            </GroupBox>
+            <GroupBox Header="Settings"></GroupBox>
+        </StackPanel>
     </StackPanel>
 </Window>
