--- a/GUI/MainWindow.xaml
+++ b/GUI/MainWindow.xaml
@@ -1,4 +1,5 @@
-﻿<Window x:Class="Upsilon.Apps.Passkey.GUI.MainWindow"
+﻿<Window xmlns:Controls="clr-namespace:Upsilon.Apps.Passkey.GUI.Views.Controls"
+        x:Class="Upsilon.Apps.Passkey.GUI.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -34,10 +35,8 @@
                 <Label Margin="5"
                        Grid.Column="0"
                        VerticalContentAlignment="Center">Username :</Label>
-                <TextBox Margin="5"
-                         Grid.Column="1"
-                         VerticalAlignment="Center"
-                         VerticalContentAlignment="Center"/>
+                <Controls:PrivateTextBox Margin="5"
+                                         Grid.Column="1" />
             </Grid>
         </StackPanel>
 </Window>
