--- a/GUI/Views/Controls/VisiblePasswordBox.xaml
+++ b/GUI/Views/Controls/VisiblePasswordBox.xaml
@@ -1,11 +1,11 @@
-﻿<UserControl x:Class="Upsilon.Apps.Passkey.GUI.Views.Controls.PrivateTextBox"
+﻿<UserControl x:Class="Upsilon.Apps.Passkey.GUI.Views.Controls.VisiblePasswordBox"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:Upsilon.Apps.Passkey.GUI.Views.Controls"
              xmlns:controls="clr-namespace:Upsilon.Apps.Passkey.GUI.ViewModels.Controls"
-             d:DataContext="{d:DesignInstance Type=controls:PrivateTextBoxViewModel}"
+             d:DataContext="{d:DesignInstance Type=controls:VisiblePasswordBoxViewModel}"
              mc:Ignorable="d">
     <Grid Width="294">
         <Grid.ColumnDefinitions>
@@ -15,16 +15,20 @@
         <PasswordBox Margin="5"
                      Grid.Column="0"
                      VerticalAlignment="Center"
-                     Visibility="Visible"/>
+                     Name="PasswordBox"
+                     PasswordChar="¤"
+                     Visibility="{Binding PasswordVisibility}"/>
         <TextBox Margin="5"
                  Grid.Column="0"
                  VerticalAlignment="Center"
-                 IsReadOnly="True"
-                 Visibility="Hidden"
-                 Text="{Binding DisplayText, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"/>
+                 Visibility="{Binding TextVisibility, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
+                 Text="{Binding Password}"/>
         <Button Margin="5"
                 Grid.Column="1"
                 FontFamily="Courier New"
-                Content="👁👓"/>
+                Visibility="{Binding ButtonVisibility}"
+                Content="👁"
+                PreviewMouseDown="_viewButton_MouseDown"
+                PreviewMouseUp="_viewButton_MouseUp"/>
     </Grid>
 </UserControl>
