--- a/GUI/MainWindow.xaml
+++ b/GUI/MainWindow.xaml
@@ -34,9 +34,17 @@
                 </Grid.ColumnDefinitions>
                 <Label Margin="5"
                        Grid.Column="0"
-                       VerticalContentAlignment="Center">Username :</Label>
+                       VerticalContentAlignment="Center"
+                       Content="{Binding Label}"/>
+                <TextBox Margin="5"
+                         Grid.Column="1"
+                         Visibility="{Binding UsernameVisibility}"
+                         KeyUp="_usernameTextBox_KeyUp"/>
                 <Controls:VisiblePasswordBox Margin="5"
-                                             Grid.Column="1" />
+                                             Grid.Column="1"
+                                             Visibility="{Binding PasswordVisibility}"
+                                             Validated="_passwordVisiblePasswordBox_Validated"
+                                             Aborded="_passwordVisiblePasswordBox_Aborded"/>
             </Grid>
         </StackPanel>
 </Window>
