--- a/GUI/Views/Controls/PasswordItem.xaml
+++ b/GUI/Views/Controls/PasswordItem.xaml
@@ -23,12 +23,15 @@
                                   Grid.Column="1"/>
         <Button Margin="5"
                 Grid.Column="2"
-                Content="🠉"/>
+                Content="🠉"
+                Click="_upButton_Click"/>
         <Button Margin="5"
                 Grid.Column="3"
-                Content="🠋"/>
+                Content="🠋"
+                Click="_downButton_Click"/>
         <Button Margin="5"
                 Grid.Column="4"
-                Content="✕"/>
+                Content="✕"
+                Click="_deleteButton_Click"/>
     </Grid>
 </UserControl>
