--- a/GUI/Views/Controls/PasswordItem.xaml
+++ b/GUI/Views/Controls/PasswordItem.xaml
@@ -17,6 +17,7 @@
         </Grid.ColumnDefinitions>
         <Label Margin="5"
                Grid.Column="0"
+               VerticalContentAlignment="Center"
                Content="{Binding Index}"/>
         <local:VisiblePasswordBox x:Name="Password"
                                   Margin="5"
