--- a/GUI/Views/Controls/PasswordsContainer.xaml
+++ b/GUI/Views/Controls/PasswordsContainer.xaml
@@ -4,17 +4,25 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:Upsilon.Apps.Passkey.GUI.Views.Controls"
-             mc:Ignorable="d" >
+             mc:Ignorable="d"
+             Height="365">
     <GroupBox Header="Passwords">
-        <Grid>
-            <StackPanel Grid.Row="0"
-                        Name="Passwords">
-                
-            </StackPanel>
-            <Button Margin="5"
-                    Grid.Row="1"
-                    Content="+"
-                    Click="_addButton_Click"/>
-        </Grid>
+        <ScrollViewer
+                      VerticalScrollBarVisibility="Auto"
+                      HorizontalScrollBarVisibility="Disabled">
+            <Grid>
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="*"/>
+                    <RowDefinition Height="Auto"/>
+                </Grid.RowDefinitions>
+                <StackPanel Grid.Row="0"
+                            Name="Passwords">
+                </StackPanel>
+                <Button Margin="5"
+                        Grid.Row="1"
+                        Content="+"
+                        Click="_addButton_Click"/>
+            </Grid>
+        </ScrollViewer>
     </GroupBox>
 </UserControl>
