--- a/GUI/Views/Controls/VisiblePasswordBox.xaml
+++ b/GUI/Views/Controls/VisiblePasswordBox.xaml
@@ -7,7 +7,7 @@
              xmlns:controls="clr-namespace:Upsilon.Apps.Passkey.GUI.ViewModels.Controls"
              d:DataContext="{d:DesignInstance Type=controls:VisiblePasswordBoxViewModel}"
              mc:Ignorable="d">
-    <Grid Width="300">
+    <Grid>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="*"/>
             <ColumnDefinition Width="Auto"/>
@@ -17,11 +17,13 @@
                      VerticalAlignment="Center"
                      Name="PasswordBox"
                      PasswordChar="¤"
+                     FontFamily="Courier New"
                      Visibility="{Binding PasswordVisibility}"/>
         <TextBox Margin="5"
                  Grid.Column="0"
                  VerticalAlignment="Center"
                  Visibility="{Binding TextVisibility, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
+                 FontFamily="Courier New"
                  Text="{Binding Password}"/>
         <Button Margin="5"
                 Grid.Column="1"
