--- a/GUI/Views/Controls/PasswordItem.xaml
+++ b/GUI/Views/Controls/PasswordItem.xaml
@@ -19,7 +19,7 @@
                Grid.Column="0"
                VerticalContentAlignment="Center"
                Content="{Binding Index}"/>
-        <local:VisiblePasswordBox x:Name="Password"
+        <local:VisiblePasswordBox x:Name="_password_VPB"
                                   Margin="5"
                                   Grid.Column="1"/>
         <Button Margin="5"
