--- a/GUI/Views/Controls/PasswordsContainer.xaml
+++ b/GUI/Views/Controls/PasswordsContainer.xaml
@@ -16,7 +16,7 @@
                     <RowDefinition Height="Auto"/>
                 </Grid.RowDefinitions>
                 <StackPanel Grid.Row="0"
-                            Name="Passwords">
+                            Name="_stackPanel">
                 </StackPanel>
                 <Button Margin="5"
                         Grid.Row="1"
