--- a/GUI/Views/Controls/VisiblePasswordBox.xaml
+++ b/GUI/Views/Controls/VisiblePasswordBox.xaml
@@ -15,7 +15,7 @@
         <PasswordBox Margin="1"
                      Grid.Column="0"
                      VerticalAlignment="Center"
-                     Name="PasswordBox"
+                     Name="_passwordBox"
                      PasswordChar="¤"
                      FontFamily="Courier New"
                      Visibility="{Binding PasswordVisibility}"/>
