--- a/GUI/Views/Controls/VisiblePasswordBox.xaml
+++ b/GUI/Views/Controls/VisiblePasswordBox.xaml
@@ -22,7 +22,7 @@
         <TextBox Margin="1"
                  Grid.Column="0"
                  VerticalAlignment="Center"
-                 Visibility="{Binding TextVisibility, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
+                 Visibility="{Binding TextVisibility}"
                  FontFamily="Courier New"
                  Text="{Binding Password}"/>
         <Button Margin="1"
