--- a/GUI/Views/PasswordGeneratorView.xaml
+++ b/GUI/Views/PasswordGeneratorView.xaml
@@ -48,6 +48,7 @@
                                      VerticalContentAlignment="Center"
                                      TextAlignment="Center"
                                      Text="{Binding PasswordLength, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
+                                     TextChanged="_length_TextBox_TextChanged"
                                      PreviewTextInput="_length_TextBox_PreviewTextInput"
                                      DataObject.Pasting="_length_TextBox_Pasting"/>
                         </StackPanel>
