Removing unnecessary Visibility bindings

--- a/GUI/Views/PasswordGeneratorView.xaml
+++ b/GUI/Views/PasswordGeneratorView.xaml
@@ -26,8 +26,9 @@
                           Click="_copyMenuItem_Click"
                           Header="_Copy"/>
                 <MenuItem Height="40"
+                          Name="_insert"
                           Click="_insertMenuItem_Click"
-                          Visibility="{Binding AllowInsert}"
+                          Visibility="Hidden"
                           Header="_Insert"/>
                 <MenuItem Height="40"
                           HorizontalAlignment="Right">
