--- a/GUI/Views/UserSettingsView.xaml
+++ b/GUI/Views/UserSettingsView.xaml
@@ -1,12 +1,12 @@
 ﻿<Window xmlns:Controls="clr-namespace:Upsilon.Apps.Passkey.GUI.Views.Controls"
-        x:Class="Upsilon.Apps.Passkey.GUI.Views.UserView"
+        x:Class="Upsilon.Apps.Passkey.GUI.Views.UserSettingsView"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Upsilon.Apps.Passkey.GUI.Views"
         xmlns:viewmodels="clr-namespace:Upsilon.Apps.Passkey.GUI.ViewModels"
-        d:DataContext="{d:DesignInstance Type=viewmodels:UserViewModel}"
+        d:DataContext="{d:DesignInstance Type=viewmodels:UserSettingsViewModel}"
         mc:Ignorable="d"
         Title="{Binding AppTitle}"
         ResizeMode="CanMinimize"
