--- a/GUI/MainWindow.xaml
+++ b/GUI/MainWindow.xaml
@@ -12,7 +12,7 @@
         ResizeMode="CanMinimize"
         WindowStartupLocation="CenterScreen"
         Height="120" Width="400">
-    <StackPanel FocusManager.FocusedElement="{Binding ElementName=Username}">
+    <StackPanel>
         <Menu>
             <Menu.ItemsPanel>
                 <ItemsPanelTemplate>
